Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68222

QQuickStyle::addStylePath does not work with qrc:/ paths

    XMLWordPrintable

Details

    • 77c0ef6aafcdcc52cb2d07ce085ee4b3574c36d9

    Description

      qrc:/ paths are listed here:
      http://doc-snapshots.qt.io/qt5-dev/qquickstyle.html#addStylePath

      However, availableStyles() does not find any from those because it passes the scheme to QDir, which works with :/ format only.

      Attachments

        Activity

          People

            mitch_curtis Mitch Curtis
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: