QQuickStyle::addStylePath(): fix support for qrc paths

The code lacked handling for the "qrc" scheme.

Task-number: QTBUG-68222
Change-Id: Ia0dfdb748b8bdb40c893375b9de77bd8c05986b6
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>